syntax = "proto3";

option go_package = "github.com/tasjen/message-app-fullstack/services/chat/chat_proto";
import "google/protobuf/empty.proto";

service Chat {
  rpc CreateUser (CreateUserReq) returns (CreateUserRes) {}
  rpc ChangePfp (ChangePfpReq) returns (google.protobuf.Empty) {}
}

message CreateUserReq {
  string username = 1;
}
message CreateUserRes {
  bytes user_id = 1;
}

message ChangePfpReq {
  bytes user_id = 1;
  string pfp_url = 2;
}